Inital image for weather
I set the initial image for the weather conditions to "#" so you don't
see a default image before the weather API is accessed

--- a/pages/weather.html
+++ b/pages/weather.html
@@ -81,7 +81,7 @@
           </div>
         </div>
         <div class="row">
-          <img id="image" src="../images/mist.gif" alt="weather conditions graphic"> <!-- ADD IN CONDITION IMAGE FUNCTIONALITY !!! -->
+          <img id="image" src="#" alt="weather conditions graphic"> <!-- ADD IN CONDITION IMAGE FUNCTIONALITY !!! -->
         </div><br>
         <div class="row">
           <button class="btn button switch">Ferinheight</button>
