Begun twitch API project
I have gained access to the API and set up a way to get info on all
predetermined users.

--- a/pages/twitch.html
+++ b/pages/twitch.html
@@ -46,6 +46,8 @@
         <h1>Twitch Machine 2.0</h1>
       </div>
       <!--Put in input field here to make basic twitch user queries-->
+      <div class="row">
+      </div>
     </div>
     <div class="container-fluid text-center well">
       <p>&copy; Dorsey Solutions Inc.</p>
