--- a/pages/twitch.html
+++ b/pages/twitch.html
@@ -46,7 +46,7 @@
         <h1>Twitch Machine 2.0</h1>
       </div>
       <!--Put in input field here to make basic twitch user queries-->
-      <div class="row">
+      <div class="row content">
       </div>
     </div>
     <div class="container-fluid text-center well">
