--- a/pages/twitch.html
+++ b/pages/twitch.html
@@ -46,7 +46,13 @@
         <h1>Twitch Machine 2.0</h1>
       </div>
       <!--Put in input field here to make basic twitch user queries-->
-      <div class="row content">
+      <div class="row">
+        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+        </div>
+        <div class="container-fluid well content col-lg-4 col-md-4 col-sm-4 col-xs-4">
+        </div>
+        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+        </div>
       </div>
     </div>
     <div class="container-fluid text-center well">
