changed icon organization
made the images img-responsive and took away link text. Link is on pic
right now and put three images in each row. Begun to start on the text
input fields

--- a/pages/twitch.html
+++ b/pages/twitch.html
@@ -47,15 +47,22 @@
       </div>
       <!--Put in input field here to make basic twitch user queries-->
       <div class="row">
-        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-        </div>
-        <div class="container-fluid well content col-lg-4 col-md-4 col-sm-4 col-xs-4">
-        </div>
-        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-        </div>
+        <div class="container-fluid well content">
+          <div class="row users">
+            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 form-group">
+              <input type="text" placeholder="Add user here..." autofocus>
+            </div>
+            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 form-group">
+              <input type="text" placeholder="Remove user here..." autofocus>
+            </div>
+            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 form-group">
+              <input type="text" placeholder="Search user here..." autofocus>
+            </div>
+          </div>
       </div>
     </div>
-    <div class="container-fluid text-center well">
+  </div>
+    <div class="container-fluid text-center well-sm">
       <p>&copy; Dorsey Solutions Inc.</p>
     </div>
     <!-- LOCAL JS -->
