Added search and addUser functionality
Users can now look up streamers and add new streamers to their list.
Next up is using cookies to remember these changes?

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <p>Welcome to my portfolio page!</p>
       </div>
     </div>
-    <div class="container-fluid text-center well">
+    <div class="container-fluid text-center well-sm">
       <p>&copy; Dorsey Solutions Inc.</p>
     </div>
     <!-- LOCAL JS -->
