--- a/pages/weather.html
+++ b/pages/weather.html
@@ -87,7 +87,7 @@
           <button class="btn button switch">Ferinheight</button>
         </div>
       </div>
-      <div class="container-fluid text-center well">
+      <div class="container-fluid text-center well-sm">
         <p>&copy; Dorsey Solutions Inc.</p>
       </div>
       <!-- LOCAL JS -->
