--- a/pages/about.html
+++ b/pages/about.html
@@ -64,7 +64,7 @@
       </div>
     </div>
   </div>
-  <div class="container-fluid text-center well">
+  <div class="container-fluid text-center well-sm">
     <p>&copy; Dorsey Solutions Inc.</p>
   </div>
   <!-- LOCAL JS -->
