--- a/pages/contact.html
+++ b/pages/contact.html
@@ -57,7 +57,7 @@
         <a href="https://www.facebook.com/daniel.dorsey.3760" target="_blank"><button class="btn btn-primary" id="facebook">Facebook</button></a>
       </div>
     </div>
-    <div class="container-fluid text-center well">
+    <div class="container-fluid text-center well-sm">
       <p>&copy; Dorsey Solutions Inc.</p>
     </div>
     <!-- LOCAL JS -->
