--- a/pages/quotes.html
+++ b/pages/quotes.html
@@ -60,7 +60,7 @@
       <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
       </div>
     </div>
-    <div class="container-fluid text-center well">
+    <div class="container-fluid text-center well-sm">
       <p>&copy; Dorsey Solutions Inc.</p>
     </div>
     <!-- LOCAL JS -->
