--- a/pages/twitch.html
+++ b/pages/twitch.html
@@ -50,14 +50,16 @@
         <div class="container-fluid well content">
           <div class="row users">
             <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 form-group">
-              <input type="text" placeholder="Add user here..." autofocus>
+              <input id="addUser" type="text" placeholder="Add user here..." autofocus>
             </div>
             <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 form-group">
-              <input type="text" placeholder="Remove user here..." autofocus>
+              <input id="removeUser" type="text" placeholder="Remove user here..." autofocus>
             </div>
             <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 form-group">
-              <input type="text" placeholder="Search user here..." autofocus>
+              <input id="searchUser" type="text" placeholder="Search user here..." autofocus>
             </div>
+          </div>
+          <div class="container-fluid userList">
           </div>
       </div>
     </div>
