--- a/pages/wiki.html
+++ b/pages/wiki.html
@@ -48,7 +48,7 @@
         <h1>Wikipedia Machine 2.0</h1>
       </div>
     </div>
-    <div class="container-fluid text-center well">
+    <div class="container-fluid text-center well-sm">
       <p>&copy; Dorsey Solutions Inc.</p>
     </div>
     <!-- LOCAL JS -->
