Restyled input boxes for responsiveness
added bootstrap class within input tags to give default responsiveness
and changed placeholder text, I also took away the outline after
highlighting nav bar.

--- a/pages/twitch.html
+++ b/pages/twitch.html
@@ -50,13 +50,13 @@
         <div class="container-fluid well content">
           <div class="row users">
             <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 form-group">
-              <input id="addUser" type="text" placeholder="Add user here..." autofocus>
+              <input class="form-control addUser" type="text" placeholder="Add user..." autofocus>
             </div>
             <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 form-group">
-              <input id="removeUser" type="text" placeholder="Remove user here..." autofocus>
+              <input class="form-control removeUser" type="text" placeholder="Remove user..." autofocus>
             </div>
             <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 form-group">
-              <input id="searchUser" type="text" placeholder="Search user here..." autofocus>
+              <input class="form-control searchUser" type="text" placeholder="Search user..." autofocus>
             </div>
           </div>
           <div class="container-fluid userList">
