began wikimedia project
I started work on making my wikipedia search app via wikimedia now that
I have access to the API. I also added img-circle to my portrait on my
about page

--- a/pages/about.html
+++ b/pages/about.html
@@ -58,7 +58,7 @@
         </ul>
       </div>
       <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-        <img class="img-responsive center-block" id="portrait" src="https://scontent.fyzd1-1.fna.fbcdn.net/v/t1.0-9/10982276_10155855221475254_1118323229130099892_n.jpg?oh=07d1ac00933fefe4fb9fa941fdcb57da&oe=58BD37E5" alt="daniel dorsey looking towards camera">
+        <img class="img-responsive center-block img-circle" id="portrait" src="https://scontent.fyzd1-1.fna.fbcdn.net/v/t1.0-9/10982276_10155855221475254_1118323229130099892_n.jpg?oh=07d1ac00933fefe4fb9fa941fdcb57da&oe=58BD37E5" alt="daniel dorsey looking towards camera">
       </div>
       <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
       </div>
