--- a/pages/wiki.html
+++ b/pages/wiki.html
@@ -47,11 +47,13 @@
       <div class="row">
         <h1>Wikipedia Machine 2.0</h1>
       </div>
+      <div class="row content">
+      </div>
     </div>
     <div class="container-fluid text-center well-sm">
       <p>&copy; Dorsey Solutions Inc.</p>
     </div>
     <!-- LOCAL JS -->
-    <script type="text/javascript" src="..scripts/wiki.js"></script>
+    <script type="text/javascript" src="../scripts/wiki.js"></script>
   </body>
 </html>
