Updated wiki app formatting and search functionality
The user is now able to search for a single wikipedia article, the
spelling is important for data retreival but its case insensitive. The
link to wikipedia works no matter what you put in.

--- a/pages/twitch.html
+++ b/pages/twitch.html
@@ -16,7 +16,7 @@
   <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <!-- LOCAL CSS -->
   <link rel="stylesheet" type="text/css" href="../styles/twitch.css">
-
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
     <div class="container-fluid text-center well">
