--- a/pages/wiki.html
+++ b/pages/wiki.html
@@ -4,7 +4,7 @@
     <title>Wikipedia Machine 2.0</title>
     <!-- META DATA -->
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <!-- FONT FACES -->
     <link href="https://fonts.googleapis.com/css?family=Abril+Fatface" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
@@ -18,7 +18,7 @@
   <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <!-- LOCAL CSS -->
   <link rel="stylesheet" type="text/css" href="../styles/wiki.css">
-
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
     <div class="container-fluid text-center well">
@@ -46,6 +46,9 @@
       </div>
       <div class="row">
         <h1>Wikipedia Machine 2.0</h1>
+      </div>
+      <div class="row form-group">
+        <input class="form-control search" type="text" placeholder="Search Wikipedia..." autofocus>
       </div>
       <div class="row content">
       </div>
