Added wanikani page
I created a page for a wanikani app that I plan to create. It's all
hooked up and ready to go.

--- a/pages/wanikani.html
+++ b/pages/wanikani.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Wikipedia Machine 2.0</title>
-    <!-- META DATA -->
+    <title>Dan's Portfolio</title>
     <meta charset="utf-8">
-
     <!-- FONT FACES -->
     <link href="https://fonts.googleapis.com/css?family=Abril+Fatface" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
@@ -17,7 +15,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
   <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <!-- LOCAL CSS -->
-  <link rel="stylesheet" type="text/css" href="../styles/wiki.css">
+  <link rel="stylesheet" type="text/css" href="../styles/wanikani.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
@@ -46,18 +44,16 @@
         </nav>
       </div>
       <div class="row">
-        <h1>Wikipedia Machine 2.0</h1>
+        <h1>WaniKani Machine 1.0</h1>
       </div>
-      <div class="row form-group">
-        <input class="form-control search" type="text" placeholder="Search Wikipedia..." autofocus>
-      </div>
-      <div class="row content">
+      <div class="row">
+        <p>I wonder what I will create from this API???</p>
       </div>
     </div>
     <div class="container-fluid text-center well-sm">
       <p>&copy; Dorsey Solutions Inc.</p>
     </div>
     <!-- LOCAL JS -->
-    <script type="text/javascript" src="../scripts/wiki.js"></script>
+    <script type="text/javascript" src="../scripts/wanikani.js"></script>
   </body>
 </html>
