--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                     <li><a href="pages/weather.html">Weather</a></li>
                     <li><a href="pages/twitch.html">Twitch</a></li>
                     <li><a href="pages/wiki.html">Wikipedia</a></li>
+                    <li><a href="pages/wanikani.html">WaniKani</a></li>
                   </ul>
               </li>
               <li><a href="pages/about.html">About</a></li>
