Accessed the wanikani API
I have begun manipulating the info found on the wanikani api, for what
purpose, i do not yet know.

--- a/pages/wanikani.html
+++ b/pages/wanikani.html
@@ -47,7 +47,13 @@
         <h1>WaniKani Machine 1.0</h1>
       </div>
       <div class="row">
-        <p>I wonder what I will create from this API???</p>
+        <p id="name"></p>
+      </div>
+      <div class="row">
+        <p id="level">Level: </p>
+      </div>
+      <div class="row">
+        <img src="../images/broken_image.png" class="img-responsive img-circle center-block" id="image" alt="gravatar profile image" width="100">
       </div>
     </div>
     <div class="container-fluid text-center well-sm">
