--- a/pages/weather.html
+++ b/pages/weather.html
@@ -83,7 +83,7 @@
           </div>
         </div>
         <div class="row">
-          <img id="image" src="#" alt="weather conditions graphic"> <!-- ADD IN CONDITION IMAGE FUNCTIONALITY !!! -->
+          <img id="image" src="../images/broken_image.png" alt="weather conditions graphic"> <!-- ADD IN CONDITION IMAGE FUNCTIONALITY !!! -->
         </div><br>
         <div class="row">
           <button class="btn button switch">Ferinheight</button>
