Began todo portion of wanikani app
I created a space to manage todo items. Still need to add functionality
for the user to input their own tasks, but I have a functional default
task for the next wanikani review which updates.

--- a/pages/twitch.html
+++ b/pages/twitch.html
@@ -48,7 +48,7 @@
       </div>
       <!--Put in input field here to make basic twitch user queries-->
       <div class="row">
-        <div class="container-fluid well content">
+        <div class="container-fluid content">
           <div class="row users">
             <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 form-group">
               <input class="form-control addUser" type="text" placeholder="Add user..." autofocus>
@@ -65,7 +65,7 @@
       </div>
     </div>
   </div>
-    <div class="container-fluid text-center well-sm">
+    <div class="container-fluid text-center">
       <p>&copy; Dorsey Solutions Inc.</p>
     </div>
     <!-- LOCAL JS -->
