--- a/pages/wanikani.html
+++ b/pages/wanikani.html
@@ -53,7 +53,24 @@
         <p id="level">Level: </p>
       </div>
       <div class="row">
+        <p id="date">Next Review: </p>
+      </div>
+      <div class="row">
         <img src="../images/broken_image.png" class="img-responsive img-circle center-block" id="image" alt="gravatar profile image" width="100">
+      </div>
+      <div class="row">
+        <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
+        </div>
+        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 todo">
+          <h2>Tasks To Complete</h2>
+          <div id="tasks">
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 done">
+          <h2>Completed Tasks</h2>
+        </div>
+        <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
+        </div>
       </div>
     </div>
     <div class="container-fluid text-center well-sm">
