Drag and drop added for desktop
Added drag and drop functionality for the items in my wanikani todo app.
I also began adding the functionality for new user-defined events.
Additionally, I took out all empty divs that were used for formatting in
lieu of a col offset.

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -62,6 +62,6 @@
       <p>&copy; Dorsey Solutions Inc.</p>
     </div>
     <!-- LOCAL JS -->
-    <script type="text/javascript" src="..scripts/contact.js"></script>
+    <script type="text/javascript" src="../scripts/contact.js"></script>
   </body>
 </html>
