--- a/pages/about.html
+++ b/pages/about.html
@@ -46,9 +46,7 @@
       <div class="row text-center ">
         <h1>About Me</h1>
       </div>
-      <div class="row">
-      <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
-      </div>
+      <div class="row col-lg-offset-3 col-md-offset-3 col-sm-offset-3 col-xs-offset-3">
       <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
         <p>Welcome to my portfolio page! I hope that the projects found here will be able to both inspire and impress you. Here are a few details about myself:</p>
         <ul>
@@ -60,8 +58,6 @@
       </div>
       <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
         <img class="img-responsive center-block img-circle" id="portrait" src="https://scontent.fyzd1-1.fna.fbcdn.net/v/t1.0-9/10982276_10155855221475254_1118323229130099892_n.jpg?oh=07d1ac00933fefe4fb9fa941fdcb57da&oe=58BD37E5" alt="daniel dorsey looking towards camera">
-      </div>
-      <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
       </div>
     </div>
   </div>
