--- a/pages/quotes.html
+++ b/pages/quotes.html
@@ -49,15 +49,12 @@
         <p>Welcome to my quote machine!</p>
         <p>Press the new button to generate something inspiring!</p>
       </div>
-      <div class="row">
+      <div class="row ">
         <button class="btn button">New Quote!</button>
       </div>
-      <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
-      </div>
-      <div class="row col-lg-8 col-md-8 col-sm-8 col-xs-8">
+      <div class="row col-lg-8 col-md-8 col-sm-8 col-xs-8
+      col-lg-offset-2 col-md-offset-2 col-sm-offset-2 col-xs-offset-2">
         <p class="quote"></p>
-      </div>
-      <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
       </div>
     </div>
     <div class="container-fluid text-center well-sm">
