--- a/pages/twitch.html
+++ b/pages/twitch.html
@@ -65,7 +65,7 @@
       </div>
     </div>
   </div>
-    <div class="container-fluid text-center">
+    <div class="container-fluid text-center well-sm">
       <p>&copy; Dorsey Solutions Inc.</p>
     </div>
     <!-- LOCAL JS -->
