--- a/pages/wanikani.html
+++ b/pages/wanikani.html
@@ -53,24 +53,23 @@
         <p id="level">Level: </p>
       </div>
       <div class="row">
-        <p id="date">Next Review: </p>
-      </div>
-      <div class="row">
         <img src="../images/broken_image.png" class="img-responsive img-circle center-block" id="image" alt="gravatar profile image" width="100">
       </div>
-      <div class="row">
-        <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
-        </div>
-        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 todo">
+      <div class="row col-lg-offset-3 col-md-offset-3 col-sm-offset-3 col-xs-offset-3">
+        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 todo ">
           <h2>Tasks To Complete</h2>
-          <div id="tasks">
+          <div id="tasks" ondrop="drop(event)" ondragover="droppable(event)">
           </div>
         </div>
         <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 done">
           <h2>Completed Tasks</h2>
+        <div id="finished" ondrop="drop(event)" ondragover="droppable(event)">
         </div>
-        <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
         </div>
+      </div>
+      <div class="row col-lg-4 col-md-4 col-sm-4 col-xs-4 col-lg-offset-4 col-md-offset-4 col-sm-offset-4 col-xs-offset-4">
+        <h2>Add A Task</h2>
+        <input type="text" class="form-control" placeholder="Add event">
       </div>
     </div>
     <div class="container-fluid text-center well-sm">
