--- a/pages/weather.html
+++ b/pages/weather.html
@@ -46,44 +46,28 @@
         <div class="row">
           <h1>Weather Machine 2.0</h1>
         </div>
-        <div class="row">
-          <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
-          </div>
+        <div class="row col-lg-offset-3 col-md-offset-3 col-sm-offset-3 col-xs-offset-3">
           <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8">
             <p class="city"></p>
           </div>
-          <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
-          </div>
         </div>
-        <div class="row ">
-          <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
-          </div>
+        <div class="row col-lg-offset-3 col-md-offset-3 col-sm-offset-3 col-xs-offset-3">
           <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8">
             <p class="temp"></p>
           </div>
-          <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
-          </div>
         </div>
-        <div class="row">
-          <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
-          </div>
+        <div class="row col-lg-offset-3 col-md-offset-3 col-sm-offset-3 col-xs-offset-3">
           <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8">
             <p class="humidity"></p>
           </div>
-          <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
-          </div>
         </div>
-        <div class="row">
-          <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
-          </div>
+        <div class="row col-lg-offset-3 col-md-offset-3 col-sm-offset-3 col-xs-offset-3">
           <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8">
             <p class="condition"></p>
           </div>
-          <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
-          </div>
         </div>
         <div class="row">
-          <img id="image" src="../images/broken_image.png" alt="weather conditions graphic" width="100"> <!-- ADD IN CONDITION IMAGE FUNCTIONALITY !!! -->
+          <img id="image" src="../images/broken_image.png" alt="weather conditions graphic" width="100">
         </div><br>
         <div class="row">
           <button class="btn button switch">Ferinheight</button>
