--- a/pages/wiki.html
+++ b/pages/wiki.html
@@ -54,7 +54,7 @@
       <div class="row content">
       </div>
     </div>
-    <div class="container-fluid text-center">
+    <div class="container-fluid text-center well-sm">
       <p>&copy; Dorsey Solutions Inc.</p>
     </div>
     <!-- LOCAL JS -->
