--- a/pages/wanikani.html
+++ b/pages/wanikani.html
@@ -69,7 +69,11 @@
       </div>
       <div class="row col-lg-4 col-md-4 col-sm-4 col-xs-4 col-lg-offset-4 col-md-offset-4 col-sm-offset-4 col-xs-offset-4">
         <h2>Add A Task</h2>
-        <input type="text" class="form-control" placeholder="Add event">
+        <form class="form-group">
+          <input type="text" class="form-control" id="title" placeholder="Name">
+          <input type="time" class="form-control" id="deadline" placeholder="Deadline">
+          <button type="button" class="btn button" id="addItem">Add</button>
+        </form>
       </div>
     </div>
     <div class="container-fluid text-center well-sm">
