--- a/pages/wanikani.html
+++ b/pages/wanikani.html
@@ -71,7 +71,7 @@
         <h2>Add A Task</h2>
         <form class="form-group">
           <input type="text" class="form-control" id="title" placeholder="Name">
-          <input type="time" class="form-control" id="deadline" placeholder="Deadline">
+          <input type="time" class="form-control" id="deadline" placeholder="Target Time">
           <button type="button" class="btn button" id="addItem">Add</button>
         </form>
       </div>
