--- a/pages/wanikani.html
+++ b/pages/wanikani.html
@@ -66,6 +66,9 @@
         <div id="finished" ondrop="drop(event)" ondragover="droppable(event)">
         </div>
         </div>
+        <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 delete" ondrop="deleted(event)" ondragover="droppable(event)">
+          <p>Drag item here to delete</p>
+        </div>
       </div>
       <div class="row col-lg-4 col-md-4 col-sm-4 col-xs-4 col-lg-offset-4 col-md-offset-4 col-sm-offset-4 col-xs-offset-4">
         <h2>Add A Task</h2>
