renamed files and updated info
"wanikani" files are now names "todo", I have updated all the navs and
titles, as well as the content of the 'todo' files to reflect this
change.

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <li><a href="pages/weather.html">Weather</a></li>
                     <li><a href="pages/twitch.html">Twitch</a></li>
                     <li><a href="pages/wiki.html">Wikipedia</a></li>
-                    <li><a href="pages/wanikani.html">WaniKani</a></li>
+                    <li><a href="pages/todo.html">Todo</a></li>
                   </ul>
               </li>
               <li><a href="pages/about.html">About</a></li>
