--- a/pages/todo.html
+++ b/pages/todo.html
@@ -15,7 +15,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
   <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <!-- LOCAL CSS -->
-  <link rel="stylesheet" type="text/css" href="../styles/wanikani.css">
+  <link rel="stylesheet" type="text/css" href="../styles/todo.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
@@ -34,7 +34,6 @@
                     <li><a href="weather.html">Weather</a></li>
                     <li><a href="twitch.html">Twitch</a></li>
                     <li><a href="wiki.html">Wikipedia</a></li>
-                    <li><a href="wanikani.html">WaniKani</a></li>
                   </ul>
               </li>
               <li><a href="about.html">About</a></li>
@@ -44,7 +43,6 @@
         </nav>
       </div>
       <div class="row">
-        <h1>WaniKani Machine 1.0</h1>
       </div>
       <div class="row">
         <p id="name"></p>
@@ -52,7 +50,6 @@
       <div class="row">
         <p id="level">Level: </p>
       </div>
-      <div class="row">
         <img src="../images/broken_image.png" class="img-responsive img-circle center-block" id="image" alt="gravatar profile image" width="100">
       </div>
       <div class="row col-lg-offset-3 col-md-offset-3 col-sm-offset-3 col-xs-offset-3">
@@ -83,6 +80,6 @@
       <p>&copy; Dorsey Solutions Inc.</p>
     </div>
     <!-- LOCAL JS -->
-    <script type="text/javascript" src="../scripts/wanikani.js"></script>
+    <script type="text/javascript" src="../scripts/todo.js"></script>
   </body>
 </html>
