--- a/pages/quotes.html
+++ b/pages/quotes.html
@@ -25,15 +25,16 @@
           <div class="navbar-header navigation">
             <a class="navbar-brand" href="#">Dan's Portfolio</a>
             <ul class="nav navbar-nav">
-              <li><a href="../index.html">Home</a></li>
+              <li><a href="index.html">Home</a></li>
               <li class="dropdown">
                 <a class="dropdown-toggle" data-toggle="dropdown" href="#">Projects
                   <span class="caret"></span></a>
                   <ul class="dropdown-menu">
-                    <li><a href="quotes.html">Quotes</a></li>
-                    <li><a href="weather.html">Weather</a></li>
-                    <li><a href="twitch.html">Twitch</a></li>
-                    <li><a href="wiki.html">Wikipedia</a></li>
+                    <li><a href="pages/quotes.html">Quotes</a></li>
+                    <li><a href="pages/weather.html">Weather</a></li>
+                    <li><a href="pages/twitch.html">Twitch</a></li>
+                    <li><a href="pages/wiki.html">Wikipedia</a></li>
+                    <li><a href="pages/todo.html">Todo</a></li>
                   </ul>
               </li>
               <li><a href="about.html">About</a></li>
