--- a/pages/weather.html
+++ b/pages/weather.html
@@ -34,7 +34,7 @@
                       <li><a href="weather.html">Weather</a></li>
                       <li><a href="twitch.html">Twitch</a></li>
                       <li><a href="wiki.html">Wikipedia</a></li>
-                      <li><a href="wanikani.html">WaniKani</a></li>
+                      <li><a href="todo.html">Todo</a></li>
                     </ul>
                 </li>
                 <li><a href="about.html">About</a></li>
