--- a/pages/todo.html
+++ b/pages/todo.html
@@ -34,6 +34,7 @@
                     <li><a href="weather.html">Weather</a></li>
                     <li><a href="twitch.html">Twitch</a></li>
                     <li><a href="wiki.html">Wikipedia</a></li>
+                    <li><a href="todo.html">Todo</a></li>
                   </ul>
               </li>
               <li><a href="about.html">About</a></li>
@@ -43,6 +44,7 @@
         </nav>
       </div>
       <div class="row">
+        <h1>Todo Machine 1.0</h1>
       </div>
       <div class="row">
         <p id="name"></p>
@@ -50,6 +52,7 @@
       <div class="row">
         <p id="level">Level: </p>
       </div>
+      <div class="row" id="icon">
         <img src="../images/broken_image.png" class="img-responsive img-circle center-block" id="image" alt="gravatar profile image" width="100">
       </div>
       <div class="row col-lg-offset-3 col-md-offset-3 col-sm-offset-3 col-xs-offset-3">
