--- a/pages/todo.html
+++ b/pages/todo.html
@@ -52,13 +52,8 @@
           <div id="tasks" ondrop="drop(event)" ondragover="droppable(event)">
           </div>
         </div>
-        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 done">
-          <h2>Completed Tasks</h2>
-        <div id="finished" ondrop="drop(event)" ondragover="droppable(event)">
-        </div>
-        </div>
-        <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 delete" ondrop="deleted(event)" ondragover="droppable(event)">
-          <p>Drag item here to delete</p>
+        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 done"  ondrop="deleted(event)" ondragover="droppable(event)">
+          <h2>Drag item here to delete</h2>
         </div>
       </div>
       <div class="row col-lg-4 col-md-4 col-sm-4 col-xs-4 col-lg-offset-4 col-md-offset-4 col-sm-offset-4 col-xs-offset-4">
