Added social media links and fixed nav links
I had some broken links in my nav for my quote.html page, and I added an
email link as well as a link to my github

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -49,7 +49,11 @@
         <h1>Contact Me</h1>
       </div>
       <div class="row">
-        <h3 id="media">Links To My Social Media Pages</h3>
+        <h3 id="media">Some Contact Links</h3>
+        <p class="button-exp">Send me an email!</p>
+        <a href="mailto:danieldorsey472@gmail.com" target="_blank"><button class="btn btn-primary" id="email">Email</button></a>
+        <p class="button-exp">Check out my Github</p>
+        <a href="https://github.com/Maerus1" target="_blank"><button class="btn btn-primary" id="github">Github</button></a>
         <p class="button-exp">Send me a tweet!</p>
         <a href="https://twitter.com/intent/tweet?screen_name=Maerus11" target="_blank"><button class="btn btn-primary" id="twitter">Twitter</button></a>
         <p class="button-exp">Check out my LinkedIn profile</p>
