Began populating main page
I added thumbnails to some small projects, plan to add some text below

--- a/index.html
+++ b/index.html
@@ -49,6 +49,21 @@
       <div class="row">
         <p>Welcome to my portfolio page!</p>
       </div>
+      <div class="row">
+        <h2>Here's a few projects I've been working on</h2>
+      </div>
+      <div class="row">
+        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+          <a class="thumbnail" href="pages/todo.html" target="_blank"><img src="images/todo_img.png" alt="todo project thumbnail" /></a>
+        </div>
+        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+          <a class="thumbnail" href="pages/twitch.html" target="_blank"><img src="images/twitch_img.png" alt="images project thumbnail" /></a>
+        </div>
+        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+          <a class="thumbnail" href="pages/weather.html" target="_blank"><img src="images/weather_img.png" alt="weather project thumbnail" /></a>
+        </div>
+      </div>
+      <hr/>
     </div>
     <div class="container-fluid text-center well-sm">
       <p>&copy; Dorsey Solutions Inc.</p>
