updated home page and about bullet list
allowed for bullet points in about section and added text to my hope
landing page

--- a/index.html
+++ b/index.html
@@ -49,6 +49,17 @@
       <div class="row">
         <p>Welcome to my portfolio page!</p>
       </div>
+      <div class="row row col-lg-offset-4 col-md-offset-4 col-sm-offset-4 col-xs-offset-4">
+        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+        <p>Thanks for taking the time to check out my portfolio!
+           What you will see here is always a work in progress, but
+           it will give you a good glimpse of the things that I have
+           been able to do. Hopefully you'll find the projects here
+           useful for yourself as well! Have fun!
+         </p>
+       </div>
+      </div>
+      <hr/>
       <div class="row">
         <h2>Here's a few projects I've been working on</h2>
       </div>
@@ -63,7 +74,6 @@
           <a class="thumbnail" href="pages/weather.html" target="_blank"><img src="images/weather_img.png" alt="weather project thumbnail" /></a>
         </div>
       </div>
-      <hr/>
     </div>
     <div class="container-fluid text-center well-sm">
       <p>&copy; Dorsey Solutions Inc.</p>
