Made changes based on user input
I had some people test the site, so I added descriptions to my projects,
added additional formatting to project pages, changed my picture on the
about page, and fixed links in my nav bar.

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Wikipedia Machine 2.0</title>
+    <title>Contact Me</title>
     <!-- META DATA -->
     <meta charset="utf-8">
 
@@ -25,7 +25,7 @@
       <div class="row">
         <nav class="navbar navbar-default">
           <div class="navbar-header navigation">
-            <a class="navbar-brand" href="#">Dan's Portfolio</a>
+            <a class="navbar-brand" href="../index.html">Dan's Portfolio</a>
             <ul class="nav navbar-nav">
               <li><a href="../index.html">Home</a></li>
               <li class="dropdown">
@@ -63,7 +63,7 @@
       </div>
     </div>
     <div class="container-fluid text-center well-sm">
-      <p>&copy; Dorsey Solutions Inc.</p>
+      <p>&copy; 2017 Daniel Dorsey</p>
     </div>
     <!-- LOCAL JS -->
     <script type="text/javascript" src="../scripts/contact.js"></script>
