--- a/pages/quotes.html
+++ b/pages/quotes.html
@@ -23,9 +23,9 @@
       <div class="row">
         <nav class="navbar navbar-default">
           <div class="navbar-header navigation">
-            <a class="navbar-brand" href="#">Dan's Portfolio</a>
+            <a class="navbar-brand" href="../index.html">Dan's Portfolio</a>
             <ul class="nav navbar-nav">
-              <li><a href="index.html">Home</a></li>
+              <li><a href="../index.html">Home</a></li>
               <li class="dropdown">
                 <a class="dropdown-toggle" data-toggle="dropdown" href="#">Projects
                   <span class="caret"></span></a>
@@ -50,16 +50,17 @@
         <p>Welcome to my quote machine!</p>
         <p>Press the new button to generate something inspiring!</p>
       </div>
-      <div class="row ">
-        <button class="btn button">New Quote!</button>
+      <hr />
+      <div class="row">
+        <p class="quote"></p>
       </div>
       <div class="row col-lg-8 col-md-8 col-sm-8 col-xs-8
       col-lg-offset-2 col-md-offset-2 col-sm-offset-2 col-xs-offset-2">
-        <p class="quote"></p>
+        <button class="btn button">New Quote!</button>
       </div>
     </div>
     <div class="container-fluid text-center well-sm">
-      <p>&copy; Dorsey Solutions Inc.</p>
+      <p>&copy; 2017 Daniel Dorsey</p>
     </div>
     <!-- LOCAL JS -->
     <script type="text/javascript" src="../scripts/quotes.js"></script>
