--- a/pages/twitch.html
+++ b/pages/twitch.html
@@ -23,7 +23,7 @@
       <div class="row">
         <nav class="navbar navbar-default">
           <div class="navbar-header navigation">
-            <a class="navbar-brand" href="#">Dan's Portfolio</a>
+            <a class="navbar-brand" href="../index.html">Dan's Portfolio</a>
             <ul class="nav navbar-nav">
               <li><a href="../index.html">Home</a></li>
               <li class="dropdown">
@@ -45,8 +45,10 @@
       </div>
       <div class="row">
         <h1>Twitch Machine 2.0</h1>
+        <p>This twitch app allows the user to add, delete, and search through their custom collection of twitch streamers.</p>
       </div>
-      <!--Put in input field here to make basic twitch user queries-->
+      <hr />
+      
       <div class="row">
         <div class="container-fluid content">
           <div class="row users">
@@ -66,7 +68,7 @@
     </div>
   </div>
     <div class="container-fluid text-center well-sm">
-      <p>&copy; Dorsey Solutions Inc.</p>
+      <p>&copy; 2017 Daniel Dorsey</p>
     </div>
     <!-- LOCAL JS -->
     <script type="text/javascript" src="../scripts/twitch.js"></script>
