--- a/pages/wiki.html
+++ b/pages/wiki.html
@@ -25,7 +25,7 @@
       <div class="row">
         <nav class="navbar navbar-default">
           <div class="navbar-header navigation">
-            <a class="navbar-brand" href="#">Dan's Portfolio</a>
+            <a class="navbar-brand" href="../index.html">Dan's Portfolio</a>
             <ul class="nav navbar-nav">
               <li><a href="../index.html">Home</a></li>
               <li class="dropdown">
@@ -47,7 +47,12 @@
       </div>
       <div class="row">
         <h1>Wikipedia Machine 2.0</h1>
+        <p>The user is able to search wikipedia for the articles which interest them from the
+           input box here. They may then click on the entries to be redirected to that specific
+           wikipedia article.
+        </p>
       </div>
+      <hr />
       <div class="row form-group">
         <input class="form-control search" type="text" placeholder="Search Wikipedia..." autofocus>
       </div>
@@ -55,7 +60,7 @@
       </div>
     </div>
     <div class="container-fluid text-center well-sm">
-      <p>&copy; Dorsey Solutions Inc.</p>
+      <p>&copy; 2017 Daniel Dorsey</p>
     </div>
     <!-- LOCAL JS -->
     <script type="text/javascript" src="../scripts/wiki.js"></script>
