--- a/pages/about.html
+++ b/pages/about.html
@@ -23,7 +23,7 @@
       <div class="row">
         <nav class="navbar navbar-default">
           <div class="navbar-header navigation">
-            <a class="navbar-brand" href="#">Dan's Portfolio</a>
+            <a class="navbar-brand" href="../index.html">Dan's Portfolio</a>
             <ul class="nav navbar-nav">
               <li><a href="../index.html">Home</a></li>
               <li class="dropdown">
@@ -57,12 +57,12 @@
         </ul>
       </div>
       <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-        <img class="img-responsive center-block img-circle" id="portrait" src="https://scontent.fyzd1-1.fna.fbcdn.net/v/t1.0-9/10982276_10155855221475254_1118323229130099892_n.jpg?oh=07d1ac00933fefe4fb9fa941fdcb57da&oe=58BD37E5" alt="daniel dorsey looking towards camera">
+        <img class="img-responsive center-block img-circle" id="portrait" src="../images/dorsey_pic.png" alt="daniel dorsey looking towards camera">
       </div>
     </div>
   </div>
   <div class="container-fluid text-center well-sm">
-    <p>&copy; Dorsey Solutions Inc.</p>
+    <p>&copy; 2017 Daniel Dorsey</p>
   </div>
   <!-- LOCAL JS -->
   <script type="text/javascript" src="../scripts/about.js"></script>
