--- a/pages/todo.html
+++ b/pages/todo.html
@@ -23,7 +23,7 @@
       <div class="row">
         <nav class="navbar navbar-default">
           <div class="navbar-header navigation">
-            <a class="navbar-brand" href="#">Dan's Portfolio</a>
+            <a class="navbar-brand" href="../index.html">Dan's Portfolio</a>
             <ul class="nav navbar-nav">
               <li><a href="../index.html">Home</a></li>
               <li class="dropdown">
@@ -45,7 +45,9 @@
       </div>
       <div class="row">
         <h1>Todo Machine 1.0</h1>
+        <p>This todo app allows the user to create and manage personal tasks via a form as well as drag and drop functionality.</p>
       </div>
+      <hr />
       <div class="row col-lg-offset-3 col-md-offset-3 col-sm-offset-3 col-xs-offset-3">
         <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 todo ">
           <h2>Tasks To Complete</h2>
@@ -66,7 +68,7 @@
       </div>
     </div>
     <div class="container-fluid text-center well-sm">
-      <p>&copy; Dorsey Solutions Inc.</p>
+      <p>&copy; 2017 Daniel Dorsey</p>
     </div>
     <!-- LOCAL JS -->
     <script type="text/javascript" src="../scripts/todo.js"></script>
