--- a/pages/weather.html
+++ b/pages/weather.html
@@ -23,7 +23,7 @@
         <div class="row">
           <nav class="navbar navbar-default">
             <div class="navbar-header navigation">
-              <a class="navbar-brand" href="#">Dan's Portfolio</a>
+              <a class="navbar-brand" href="../index.html">Dan's Portfolio</a>
               <ul class="nav navbar-nav">
                 <li><a href="../index.html">Home</a></li>
                 <li class="dropdown">
@@ -45,7 +45,9 @@
         </div>
         <div class="row">
           <h1>Weather Machine 2.0</h1>
+          <p>This weather app allows the user to check the temperature and conditions in their area. The user may also toggle the measurement.</p>
         </div>
+        <hr />
         <div class="row col-lg-offset-3 col-md-offset-3 col-sm-offset-3 col-xs-offset-3">
           <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8">
             <p class="city"></p>
@@ -70,11 +72,11 @@
           <img id="image" src="../images/broken_image.png" alt="weather conditions graphic" width="100">
         </div><br>
         <div class="row">
-          <button class="btn button switch">Ferinheight</button>
+          <button class="btn button switch">Fahrenheit</button>
         </div>
       </div>
       <div class="container-fluid text-center well-sm">
-        <p>&copy; Dorsey Solutions Inc.</p>
+        <p>&copy; 2017 Daniel Dorsey</p>
       </div>
       <!-- LOCAL JS -->
       <script type="text/javascript" src="../scripts/weather.js"></script>
