Further small changes based on user input
I cited the images I use in my weather app, I also added another keyword
for the images in my weather app.

--- a/pages/weather.html
+++ b/pages/weather.html
@@ -70,6 +70,8 @@
         </div>
         <div class="row">
           <img id="image" src="../images/broken_image.png" alt="weather conditions graphic" width="100">
+          <figcaption><strong>Image by Hannah Jung, found <a href="https://dribbble.com/shots/1953696-Rebound-of-Geometric-Weather-Gif"
+                      alt="https://dribbble.com/shots/1953696-Rebound-of-Geometric-Weather-Gif" target="_blank">here</a></strong></figcaption>
         </div><br>
         <div class="row">
           <button class="btn button switch">Fahrenheit</button>
