--- a/pages/todo.html
+++ b/pages/todo.html
@@ -61,8 +61,8 @@
       <div class="row col-lg-4 col-md-4 col-sm-4 col-xs-4 col-lg-offset-4 col-md-offset-4 col-sm-offset-4 col-xs-offset-4">
         <h2>Add A Task</h2>
         <form class="form-group">
-          <input type="text" class="form-control" id="title" placeholder="Name">
-          <input type="time" class="form-control" id="deadline" placeholder="Target Time">
+          <input type="text" class="form-control" id="title" placeholder="Activity Name">
+          <input type="text" class="form-control" id="deadline" placeholder="Target Time">
           <button type="button" class="btn button" id="addItem">Add</button>
         </form>
       </div>
