--- a/index.html
+++ b/index.html
@@ -65,15 +65,15 @@
       </div>
       <div class="row">
         <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-          <a class="thumbnail img-responsive" href="pages/todo.html" target="_blank"><img src="images/todo_img.png" alt="todo project thumbnail" /></a>
+          <a class="thumbnail img-responsive" href="pages/todo.html" target="_blank"><img src="images/todo_img.jpg" alt="todo project thumbnail" /></a>
           <figcaption>This is a todo app where you will be able to create and manage personal tasks via a form as well as drag and drop functionality.</figcaption>
         </div>
         <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-          <a class="thumbnail img-responsive" href="pages/twitch.html" target="_blank"><img src="images/twitch_img.png" alt="images project thumbnail" /></a>
+          <a class="thumbnail img-responsive" href="pages/twitch.html" target="_blank"><img src="images/twitch_img.jpg" alt="images project thumbnail" /></a>
           <figcaption>This twitch app allows the user to add, delete, and search through their custom collection of twitch streamers.</figcaption>
         </div>
         <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-          <a class="thumbnail img-responsive" href="pages/weather.html" target="_blank"><img src="images/weather_img.png" alt="weather project thumbnail" /></a>
+          <a class="thumbnail img-responsive" href="pages/weather.html" target="_blank"><img src="images/weather_img.jpg" alt="weather project thumbnail" /></a>
           <figcaption>This is a weather app where the user is able to check the temperature and conditions in their area. The user may also toggle the measurement.</figcaption>
         </div>
       </div>
