--- a/pages/about.html
+++ b/pages/about.html
@@ -57,7 +57,7 @@
         </ul>
       </div>
       <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-        <img class="img-responsive center-block img-circle" id="portrait" src="../images/dorsey_pic.png" alt="daniel dorsey looking towards camera">
+        <img class="img-responsive center-block img-circle" id="portrait" src="../images/dorsey_pic.jpg" alt="daniel dorsey looking towards camera">
       </div>
     </div>
   </div>
