--- a/pages/todo.html
+++ b/pages/todo.html
@@ -46,6 +46,7 @@
       <div class="row">
         <h1>Todo Machine 1.0</h1>
         <p>This todo app allows the user to create and manage personal tasks via a form as well as drag and drop functionality.</p>
+        <p>NOTE: There is no drag and drop functionality for mobile at this time!</p>
       </div>
       <hr />
       <div class="row col-lg-offset-3 col-md-offset-3 col-sm-offset-3 col-xs-offset-3">
